2005-10-06  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: use xfer:destination-directory only for get/mget,
	  not for put/mput.

2005-10-06  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc: fixed another coredump with KillAll/Schedule.

2005-10-05  Alexander V. Lukyanov <lav@yars.free.net>

	* Job.cc, Job.h: fixed core dump with KillAll.
	* HttpDir.cc: fixed prefix path removing.

2005-10-01  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: skip all spaces in FEAT reply to workaround some
	  broken servers.

2005-09-30  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc, resource.cc: new setting xfer:destination-directory.

2005-09-27  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.h: make handshake_done public.
	* lftp_ssl.cc: do_handshake even when writing no data.
	* buffer_ssl.cc, buffer_ssl.h: call ssl->write even with no data
	  when handshake is not done yet; (Done) check handshake_done -
	  this fixes a bug with uploading empty files.
	* ftpclass.cc: check buf->Done instead of Size.

2005-09-26  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: simplify path combination; pre-encode %2F for hftp.
	* HttpDir.cc: ignore special and closing tags; move workaround for
	  broken proxies to handle all links; specially handle empty paths.
	* FileAccess.cc: don't change url when going up .. - simply drop it.

2005-09-22  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed exit code of slot command.

2005-09-19  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: don't add basename of source dir if target is slot:
	  or bm: pseudo-url without trailing slash.
	* history.cc: decode only non-urls.
	* Http.cc: fix path combination (avoid double slash); use new_cwd->url
	  when available.

2005-09-07  Alexander V. Lukyanov <lav@yars.free.net>

	* lftp_ssl.cc: free ca_list and crl_list when an error happens while
	  loading the certificates. This fixes a core dump.
